--- a/package.json
+++ b/package.json
@@ -25,13 +25,15 @@
     "@ionic/angular": "^4.7.1",
     "@ionic/pro": "2.0.4",
     "core-js": "^2.5.4",
+    "ionic-angular": "^3.9.9",
+    "ng-circle-progress": "^1.5.1",
     "rxjs": "~6.5.1",
     "tslib": "^1.9.0",
     "zone.js": "~0.9.1"
   },
   "devDependencies": {
     "@angular-devkit/architect": "~0.801.2",
-    "@angular-devkit/build-angular": "~0.801.2",
+    "@angular-devkit/build-angular": "^0.803.22",
     "@angular-devkit/core": "~8.1.2",
     "@angular-devkit/schematics": "~8.1.2",
     "@angular/cli": "~8.1.2",
