--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@ionic/pro": "2.0.4",
     "@thisissoon/angular-inviewport": "^4.2.2",
     "@thisissoon/angular-scroll-collapse": "^4.1.0",
+    "@zxing/ngx-scanner": "^3.0.0",
     "cordova-android": "8.1.0",
     "cordova-plugin-file": "6.0.2",
     "core-js": "^2.5.4",
